# res://scripts/ui/DeathScreen.gd
extends Control
class_name DeathScreen

@onready var message_label: Label = get_node_or_null("Panel/VBoxContainer/MessageLabel")
@onready var retry_button: Button = get_node_or_null("Panel/VBoxContainer/RetryButton")
@onready var menu_button: Button = get_node_or_null("Panel/VBoxContainer/MenuButton")

var last_checkpoint: String = "default"

func _ready() -> void:
	# ğŸ”¥ CRÃTICO: Process Mode debe ser Always
	process_mode = Node.PROCESS_MODE_ALWAYS
	
	# ğŸ”¥ CRÃTICO: Empezar OCULTO pero permitir clics
	visible = false
	modulate.a = 0.0
	
	# ğŸ”¥ CRÃTICO: Desactivar mouse filter mientras estÃ¡ oculto
	mouse_filter = Control.MOUSE_FILTER_IGNORE
	
	# AÃ±adir al grupo
	if not is_in_group("death_screen"):
		add_to_group("death_screen")
	
	# Conectar botones
	if retry_button:
		retry_button.pressed.connect(_on_retry_pressed)
		print("âœ… RetryButton conectado")
	else:
		push_error("âŒ RetryButton NO encontrado - Verifica ruta: Panel/VBoxContainer/RetryButton")
	
	if menu_button:
		menu_button.pressed.connect(_on_menu_pressed)
		print("âœ… MenuButton conectado")
	else:
		push_error("âŒ MenuButton NO encontrado - Verifica ruta: Panel/VBoxContainer/MenuButton")
	
	print("ğŸ’€ DeathScreen inicializado")
	print("  - Process Mode: ", process_mode)
	print("  - Visible: ", visible)
	print("  - Modulate Alpha: ", modulate.a)
	print("  - Mouse Filter: ", mouse_filter)

func show_death_screen(checkpoint: String = "default") -> void:
	print("ğŸ’€ show_death_screen() LLAMADO")
	print("  - Checkpoint: ", checkpoint)
	
	last_checkpoint = checkpoint
	
	# ğŸ”¥ ASEGURAR que estÃ¡ visible
	visible = true
	
	# ğŸ”¥ ACTIVAR MOUSE FILTER
	mouse_filter = Control.MOUSE_FILTER_STOP
	
	# ğŸ”¥ PAUSAR EL JUEGO
	print("â¸ï¸ Pausando juego...")
	get_tree().paused = true
	print("  - Juego pausado: ", get_tree().paused)
	
	# ğŸ”¥ FADE IN
	print("ğŸ¬ Iniciando fade in...")
	modulate.a = 0.0
	
	var tween = create_tween()
	tween.set_pause_mode(Tween.TWEEN_PAUSE_PROCESS)  # ğŸ”¥ CRÃTICO: Funciona aunque estÃ© pausado
	tween.tween_property(self, "modulate:a", 1.0, 0.5)
	
	print("âœ… DeathScreen visible - Alpha: ", modulate.a)

func _on_retry_pressed() -> void:
	print("ğŸ”„ REINTENTAR presionado")
	print("  - Ãšltimo checkpoint: ", last_checkpoint)
	
	# ğŸ”¥ DESACTIVAR MOUSE FILTER
	mouse_filter = Control.MOUSE_FILTER_IGNORE
	
	# ğŸ”¥ DESPAUSAR
	get_tree().paused = false
	
	# ğŸ”¥ OCULTAR
	visible = false
	modulate.a = 0.0
	
	# ğŸ†• RESPAWNEAR ENEMIGOS - Limpiar lista ANTES de cambiar escena
	print("â˜ ï¸ Limpiando enemigos muertos para respawn...")
	if SceneManager:
		# ğŸ”¥ USAR EL NOMBRE DEL NODO RAÃZ, NO DEL ARCHIVO
		var scene_root_name = get_tree().current_scene.name
		print("  ğŸ·ï¸ Nombre de escena (nodo raÃ­z): ", scene_root_name)
		
		var enemies_to_remove = []
		
		for enemy_id in SceneManager.world_state["killed_enemies"]:
			if enemy_id.begins_with(scene_root_name):
				enemies_to_remove.append(enemy_id)
		
		for enemy_id in enemies_to_remove:
			SceneManager.world_state["killed_enemies"].erase(enemy_id)
			print("  âœ… Enemigo limpiado: ", enemy_id)
		
		print("  ğŸ“‹ Enemigos restantes en lista global: ", SceneManager.world_state["killed_enemies"])
	
	# ğŸ†• CAMBIAR A ESCENA DEL CHECKPOINT
	print("ğŸ”„ Cambiando a escena del checkpoint...")
	if SceneManager:
		var checkpoint_scene = SceneManager.last_checkpoint_scene
		var checkpoint_id = SceneManager.last_checkpoint_id
		
		# Si no hay checkpoint guardado, usar la escena actual
		if checkpoint_scene.is_empty():
			checkpoint_scene = get_tree().current_scene.scene_file_path
		
		print("  - Escena: ", checkpoint_scene)
		print("  - Checkpoint ID: ", checkpoint_id)
		
		# ğŸ”¥ IMPORTANTE: Marcar para restaurar vida completa al respawnear
		SceneManager.player_data = {}
		SceneManager.should_restore_full_health = true
		
		# Cambiar a la escena del checkpoint (esto recargarÃ¡ los enemigos)
		SceneManager.change_scene(checkpoint_scene, checkpoint_id)
	else:
		# Fallback: recargar escena actual
		print("âš ï¸ SceneManager no encontrado, recargando escena actual")
		SceneManager.spawn_point_id = last_checkpoint
		get_tree().reload_current_scene()

func _on_menu_pressed() -> void:
	print("ğŸ  MENÃš PRINCIPAL presionado")
	
	# ğŸ”¥ DESACTIVAR MOUSE FILTER
	mouse_filter = Control.MOUSE_FILTER_IGNORE
	
	# ğŸ”¥ DESPAUSAR
	get_tree().paused = false
	
	# ğŸ”¥ OCULTAR
	visible = false
	modulate.a = 0.0
	
	# ğŸ”¥ IR AL MENÃš
	print("ğŸ  Cambiando a main menu...")
	SceneManager.change_scene("res://assets/scenas/ui/main_menu.tscn")
